Fix button to show in column on small screens user box header

--- a/style.css
+++ b/style.css
@@ -437,34 +437,34 @@ header.scrolled::before {
 }
 
 .header .user-box .user-icon-default {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
-    background: #f1f1f1;
-    padding: .5rem;
-    border: 3px solid var(--green);
-    font-size: 60px;
-    color: #555;
-    margin: auto;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 120px;
+	height: 120px;
+	border-radius: 50%;
+	background: #f1f1f1;
+	padding: .5rem;
+	border: 3px solid var(--green);
+	font-size: 60px;
+	color: #555;
+	margin: auto;
 }
 
 .header .user-box .user-icon-default i {
-    color: inherit;
+	color: inherit;
 }
 
 .header .user-box .user-name {
-    font-size: 1.2rem;
-    font-weight: bold;
-    /* margin-bottom: 0.5rem; */
+	font-size: 1.2rem;
+	font-weight: bold;
+	/* margin-bottom: 0.5rem; */
 }
 
 .header .user-box .user-email {
-    font-size: 1rem;
-    color: #666;
-    margin-bottom: 1rem;
+	font-size: 1rem;
+	color: #666;
+	margin-bottom: 1rem;
 }
 
 .bxs-user:before {
@@ -2493,5 +2493,13 @@ footer .bottom-footer {
 	.order-detail .box .billing-info {
 		padding-top: 20px;
 		/* Ajoute de l'espace au-dessus de la section de facturation */
+	}
+}
+
+/* Ce @media est utilisé pour les écrans plus petits que 420px pour les boutons se connecter et s'enregistrer dans le header. */
+@media (max-width: 420px) {
+	.header .user-box .flex-btn.flex-btn-inline {
+		flex-direction: column;
+		align-items: center;
 	}
 }
